    . Added new functorial interface "MakeSeeded" to support diversification
      with user-provided hash functions.
- Scanf: new function "unescaped" (PR#3888)
- Set and Map: more efficient implementation of "filter" and "partition"
- String: new function "map" (PR#3888)

Bug Fixes:
- PR#4549: Filename.dirname is not handling multiple / on Unix
- PR#4869: rare collisions between assembly labels for code and data
- PR#4880: "assert" constructs now show up in the exception stack backtrace
- PR#5064, PR#5485: try to ensure that 4K words of stack are available
  before calling into C functions, raising a Stack_overflow exception
  otherwise.  This reduces (but does not eliminate) the risk of
  segmentation faults due to stack overflow in C code
- PR#5313: ocamlopt -g misses optimizations
- PR#5322: type abbreviations expanding to a universal type variable
- PR#5325: (Windows) blocked Unix.recv in one thread blocks Unix.send in
  another thread
- PR#5309: Queue.add is not thread/signal safe
- PR#5327: (Windows) Unix.select blocks if same socket listed in first and
  third arguments
- PR#5330: thread tag with '.top' and '.inferred.mli' targets
- PR#5343: ocaml -rectypes is unsound wrt module subtyping
- PR#5394: Documentation for -dtypes is missing in manpage
- PR#5416: (Windows) Unix.(set|clear)_close_on_exec now preserves blocking mode
- PR#5436: update object ids on unmarshaling
- PR#5453: configure doesn't find X11 under Ubuntu/MultiarchSpec
- PR#5469: private record type generated by functor loses abbreviation
- PR#5476: bug in native code compilation of let rec on float arrays
- PR#4688: (Windows) special floating-point values aren't converted to strings correctly
- emacs mode: colorization of comments and strings now works correctly
- PR5475: Wrapper script for interpreted LablTk wrongly handles command line parameters
- PR5461: Double linking of bytecode modules
- PR#5498: Unification with an empty object only checks the absence of
           the first method