@@ -53,6 +53,7 @@ Standard library:
 
 Bug Fixes:
 - PR#4549: Filename.dirname is not handling multiple / on Unix
+- PR#4688: (Windows) special floating-point values aren't converted to strings correctly
 - PR#4869: rare collisions between assembly labels for code and data
 - PR#4880: "assert" constructs now show up in the exception stack backtrace
 - PR#5064, PR#5485: try to ensure that 4K words of stack are available
@@ -74,7 +75,6 @@ Bug Fixes:
 - PR#5453: configure doesn't find X11 under Ubuntu/MultiarchSpec
 - PR#5469: private record type generated by functor loses abbreviation
 - PR#5476: bug in native code compilation of let rec on float arrays
-- PR#4688: (Windows) special floating-point values aren't converted to strings correctly
 - emacs mode: colorization of comments and strings now works correctly
 - PR5475: Wrapper script for interpreted LablTk wrongly handles command line parameters
 - PR5461: Double linking of bytecode modules
@@ -86,6 +86,7 @@ Bug Fixes:
 - PR#5510: ocamldep has duplicate -ml{,i}-synonym options
 - PR#5511: in Bigarray.reshape, unwarranted limitation on new array dimensions.
 - PR#5513: Int64.div causes floating point exception (ocamlopt, x86)
+- PR#5516: in Bigarray C stubs, use C99 / GCC flexible array types if possible
 
 Feature wishes:
 - PR#352: new option "-stdin" to make ocaml read stdin as a script
